# clone-oscillations-QAT

./: .gitignore  pyproject.toml  range_estimators.py  test.py  wtf.py
.ipynb_checkpoints/: EWGS_Learnable-checkpoint  requirements-checkpoint.txt  test-checkpoint.py  wtf-checkpoint.py
Model/: mobilenet_v2.py  mobilenet_v2_quantized.py
Model/.ipynb_checkpoints/: mobilenet_v2-checkpoint.py
Quantization/: __init__.py  autoquant_utils.py  base_quantized_classes.py  base_quantized_model.py  quantization_hijacker.py  quantization_manager.py  quantized_folded_bn.py  range_estimators.py  test.py  utils.py
Quantization/.ipynb_checkpoints/: base_quantized_classes-checkpoint.py
Quantization/Quantizer/: __init__.py  quantizer_base.py  rounding.py  testing.py  uniform_quantizers.py
Quantization/Quantizer/.ipynb_checkpoints/: rounding-checkpoint.py  uniform_quantizers-checkpoint.py
Quantizer/: quantizer_base.py  testing.py  uniform_quantizers.py
logging/: EWGS_Learnable
utils/: dataloader.py  optimizer.py  oscillation_tracking_utils.py  qat_utils.py  trainer.py  utils.py
utils/.ipynb_checkpoints/: trainer-checkpoint.py  utils-checkpoint.py
